--- a/web/package.json
+++ b/web/package.json
@@ -27,5 +27,8 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-exec": "^1.0.1"
+  },
+  "dependencies": {
+    "coffeescript": "^2.5.1"
   }
 }
