--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,14 +2,18 @@ FROM ubuntu:latest
 
 MAINTAINER Richard Berger <richard.berger@outlook.com>
 
-RUN apt update && apt install -y wget build-essential cmake git python3
+ENV DEBIAN_FRONTEND=noninteractive
+
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y wget build-essential cmake git python3 npm && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 RUN cd /opt && git clone https://github.com/emscripten-core/emsdk.git && \
     cd /opt/emsdk && \
     ./emsdk install latest && \
     ./emsdk activate latest
-
-RUN apt install -y npm
 
 RUN npm install -g bower
 
