--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -1,4 +1,4 @@
-name: build_and_deploy
+name: CI
 
 on:
   push:
@@ -9,9 +9,11 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout lammps/lammps-web
+      uses: actions/checkout@v2
 
-    - uses: actions/checkout@v2
+    - name: Checkout lammps/lammps
+      uses: actions/checkout@v2
       with:
         repository: lammps/lammps
         path: lammps
@@ -28,5 +30,11 @@ jobs:
         ./emsdk install latest
         ./emsdk activate latest
 
-    - name: Compile LAMMPS
+    - name: Build LAMMPS and generate website
       run: ./build.sh
+
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./web/_site
